--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -17,7 +17,8 @@
 
       <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
         <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="{% url 'home' %}">Main Page</a>
-        <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="Second">Second Page</a>
+        <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="second">Second Page</a>
+        <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="create">Add Task</a>
       </nav>
     </div>
 
