--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -1,7 +1,7 @@
 {% extends 'main/base.html' %}
 
 {% block title %}
-Main Page
+{{ title }}
 {% endblock %}
 
 {% block head %}<h1>READ CAREFULLY</h1>{% endblock %}
@@ -11,5 +11,18 @@ Main Page
 <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
 <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+{% endblock %}
+
+{% block content %}
+    {% if tasks %}
+        {% for el in tasks %}
+            <div class ="alert alert-success mt-2">
+                <h3>{{ el.title }}</h3>
+                <p>{{ el.task }}</p>
+            </div>
+        {% endfor %}
+    {% else %}
+        <p>No Tasks for now</p>
+    {% endif %}
 {% endblock %}
 
